--- a/arrays/arrays.html
+++ b/arrays/arrays.html
@@ -9,7 +9,9 @@
     <h1>JavaScript Arrays</h1>
 
     <script>
-// your code goes here
+var exited= prompt("what are you exited about at meet?");
+exited= exited.split(",");  
+document.write(exited);
     </script>
 </body>
 
