--- a/loops/loops.html
+++ b/loops/loops.html
@@ -16,8 +16,7 @@ function getRandomInt(min, max) {
 
 var randomInt = getRandomInt(1, 100);
 /* END STARTING CODE */
-
-// your code goes under here
+var
 
     </script>
 </body>
