--- a/vars/vars.html
+++ b/vars/vars.html
@@ -9,7 +9,19 @@
     <h1>JavaScript Variables</h1>
 
     <script>
-// your code goes here!
+
+		var birthYear =prompt("whe were you born?");
+		birthYear= parseInt(birthYear);
+
+		var luckyNumber= prompt("what is your lucky number?");
+		luckyNumber = parseInt(luckyNumber);
+
+		var favFruit="apple";
+		var favSubject="chemistry";
+		
+
+
+
     </script>
 </body>
 
